@@ -13,12 +13,3 @@ Sphinx
 - "often used" combo box in sidebar
 - source file cross-references?
 
-Web App
-*******
-
-- fix /download
-
-- discuss and debug comments system
-- prepare for databases other than sqlite for comments
-- add search via Xapian or Nucular (Python indexer - nucular.sf.net)
-- optionally have a contents tree view in the sidebar (AJAX based)?
